--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: python
+deploy:
+  provider: elasticbeanstalk
+  access_key_id:
+    secure: "AKIAXHPVLDE6LUSZFCWC"
+  secret_access_key:
+    secure: "tkGsysVrEyDD6ChdMjTQXOSUQtdcm8HSQxb78S4p"
+  region: "us-west-2"
+  app: "swe1-app"
+  env: "example-app-environment"
+  bucket_name: "swe1-app-bucket"
