--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,18 @@
 language: python
+language: python
+deploy:
+  provider: elasticbeanstalk
+  access_key_id:
+    secure: "AKIAXHPVLDE6LUSZFCWC"
+  secret_access_key:
+    secure: "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"
+  region: "us-west-2"
+  app: "swe1-app"
+  env: "ELASTIC_BEANSTALK_ENV"
+  bucket_name: "swe1-app-bucket"
+before_deploy: "echo 'ready?'"
+deploy:
+  ..
+after_deploy:
+  - ./after_deploy_1.sh
+  - ./after_deploy_2.sh
