added AWS features

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,19 @@ script:
 after_success:
   coveralls
 
+deploy:
+  provider: elasticbeanstalk
+  access_key_id: "AKIATIOYYKGRB54H7ZEL"
+  secret_access_key: "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"
+  region: "us-west-2"
+  app: "swe1-app"
+  env: "django-test1"
+  bucket_name: "elasticbeanstalk-us-west-2-224329748898"
+  on:
+      repo: Pankhurinyu/swe1-app
+      branch: main
+
+
+
+
 
