--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ after_success:
 
 deploy:
   provider: elasticbeanstalk
-  access_key_id: ""
-  secret_access_key: ""
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
   region: "us-west-2"
   app: "swe1-app"
   env: "django-env"
