chnaged YML file

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
   - python -m black . --check
   - python -m flake8 --ignore=E303,E501 --max-line-length=88
   - python -m coverage run manage.py test 
+  #- flake8 --extend-ignore E203,E501,E401
 
 after_success:
   coveralls
