chnaged YML file

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
   access_key_id: "$AWS_ACCESS_KEY"
   secret_access_key: "$AWS_SECRET_KEY"
   region: "us-west-2"
-  app: "swe1-app"
+  app: "mysite"
   env: "django-env"
   bucket_name: "elasticbeanstalk-us-west-2-011029750786"
   on:
